# nees

./: .gitignore  Cargo.toml  config.json  config_.json  config_1000.json  config_1kepsilonerr.json  config_2kFAIL2.json  config_300.json  config_big.json  config_cstats.json  config_epsilonerr2.json  config_err2.json  config_hetero.json  config_homo.json  config_inc_br.json  config_infloop.json  config_w.json  config_working.json  config_working5.json  config_working6.json  config_working7.json  config_working8.json  sln.csv  sln_a=6.csv  sln_av=2.csv  sln_base.csv
configs/: config.json  config_.json  config_200.json  config_500v2.json  config_FAIL2000.json  config_working2.json  config_working9.json  configstar.json
cstat/: plot.py
cstat/as/: asp_mean_0.csv  asp_mean_1.csv  asp_mean_2.csv  asp_std_0.csv  asp_std_1.csv  asp_std_2.csv  inc_cv_0.csv  inc_cv_1.csv  inc_cv_2.csv  inc_mean_0.csv  inc_mean_1.csv  inc_mean_2.csv  qual_sep_0.csv  qual_sep_1.csv  qual_sep_2.csv  rep_0.csv  rep_1.csv  rep_2.csv  rep_3.csv  rep_4.csv  rep_5.csv  rep_6.csv  rep_7.csv  rep_8.csv  rep_9.csv
cstat/ces/: asp_mean_0.csv  asp_mean_1.csv  asp_mean_2.csv  asp_std_0.csv  asp_std_1.csv  asp_std_2.csv  inc_cv_0.csv  inc_cv_1.csv  inc_cv_2.csv  inc_mean_0.csv  inc_mean_1.csv  inc_mean_2.csv  qual_sep_0.csv  qual_sep_1.csv  qual_sep_2.csv  rep_0.csv  rep_1.csv  rep_2.csv  rep_3.csv  rep_4.csv  rep_5.csv  rep_6.csv  rep_7.csv  rep_8.csv  rep_9.csv
src/: config.json  cstats.rs  distribution.rs  export.rs  main.rs  render.rs  sln.csv  vectorrender.rs  world.rs
src/multidim/: allocate.rs  (+5 more)
(+4 files in other folders)
