[package]
name = "nees"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
bevy = "0.14.2"
bevy_prototype_lyon = "0.12.0"
rand = "0.8.5"
rand_distr = "0.4.3"
bevy_polyline = "0.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = {version = "1.0.133" }
csv = "1.3.1"
petgraph = "0.7.1"
serde_arrays = "0.1.0"
serde-big-array = "0.5.1"
serde_with = "3.12.0"
